# Unified-Actor-Critic

./: .gitignore  README.md  pyproject.toml
docs/: PLAN.md  RELATED_WORK.md
results/Hopper-v5/: ddpg_seed0.json  ddpg_seed1.json  ddpg_seed2.json  ddpg_seed3.json  ddpg_seed4.json  ddpg_smooth_seed0.json  ddpg_smooth_seed1.json  ddpg_smooth_seed2.json  ddpg_smooth_seed3.json  ddpg_smooth_seed4.json  ddpg_twin_seed0.json  ddpg_twin_seed1.json  ddpg_twin_seed2.json  ddpg_twin_seed3.json  ddpg_twin_seed4.json  ppo_seed0.json  sac_alpha_01_seed0.json  sac_alpha_01_seed1.json  sac_alpha_01_seed2.json  sac_alpha_01_seed3.json  sac_alpha_01_seed4.json  sac_alpha_03_seed0.json  sac_alpha_03_seed1.json  sac_alpha_03_seed2.json  sac_alpha_03_seed3.json  sac_alpha_03_seed4.json  sac_alpha_0_seed0.json  sac_alpha_0_seed1.json  sac_alpha_0_seed2.json  sac_seed0.json  sac_seed1.json  sac_seed2.json  sac_seed3.json  sac_seed4.json  sac_smoothed_seed0.json  sac_smoothed_seed1.json  sac_smoothed_seed2.json  sac_smoothed_seed3.json  sac_smoothed_seed4.json  summary.json  (+10 more)
results/Pendulum-v1/: a2c_seed0.json  ddpg_seed0.json  ddpg_smooth_seed0.json  ddpg_twin_seed0.json  (+12 more)
scripts/: benchmark.py  validate_cleanrl.py
tests/: cleanrl_reference.py  test_actor_loss.py  test_agent.py  test_buffers.py  test_cleanrl_equivalence.py  test_config.py  test_distributions.py  test_networks.py  test_presets.py  test_signal.py  test_targets.py  test_train.py
unified_ac/: __init__.py  agent.py  buffers.py  config.py  distributions.py  losses.py  networks.py  presets.py  signal.py  targets.py  train.py
