[project]
name = "unified-ac"
version = "0.1.0"
description = "Unified actor-critic: A2C/PPO/DDPG/TD3/SAC as one configuration space (PDL/GPI unification)"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2",
    "numpy>=1.26",
    "gymnasium>=0.29",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["unified_ac"]

[tool.pytest.ini_options]
testpaths = ["tests"]
